[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/First_Scene.gd" type="Script" id=2]
[ext_resource path="res://Tile_Set_Ground_Extended+.tres" type="TileSet" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Position_Heroe" type="Position2D" parent="."]
position = Vector2( 2033, 1494 )

[node name="Enemy_1" type="Position2D" parent="."]
position = Vector2( 2103, 1502 )

[node name="Enemy_2" type="Position2D" parent="."]
position = Vector2( 2140, 1521 )

[node name="Enemy_3" type="Position2D" parent="."]
position = Vector2( 2199, 1517 )

[node name="Ally" type="Position2D" parent="."]
position = Vector2( 117, 188 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 4, 4 )
show_collision = true
format = 1
tile_data = PoolIntArray( 12452110, 10, 0, 12517647, 10, 0, 12517648, 10, 0, 12517649, 11, 0, 12517650, 8, 0, 12517651, 9, 0, 12517655, 10, 0, 12583196, 10, 0, 24314356, 10, 0, 24379892, 10, 0, 24379893, 10, 0, 24445429, 10, 0, 24510964, 10, 0, 24510965, 10, 0, 24576500, 10, 0, 24576501, 10, 0, 24642037, 10, 0, 24642038, 10, 0, 24707574, 10, 0, 24707575, 10, 0, 24707576, 10, 0, 24707577, 10, 0, 24707591, 10, 0, 24707592, 10, 0, 24707593, 10, 0, 24707594, 10, 0, 24773113, 10, 0, 24773114, 10, 0, 24773115, 10, 0, 24773116, 10, 0, 24773117, 10, 0, 24773118, 10, 0, 24773119, 10, 0, 24773120, 10, 0, 24773121, 10, 0, 24773122, 10, 0, 24773123, 10, 0, 24773124, 10, 0, 24773125, 10, 0, 24773126, 10, 0, 24773130, 10, 0, 24838666, 10, 0, 24838667, 10, 0, 24904203, 10, 0, 24969739, 10, 0, 24969740, 10, 0, 24969741, 10, 0, 24969742, 10, 0, 25035279, 10, 0, 25035280, 10, 0, 25035281, 10, 0, 25035282, 10, 0, 25035283, 10, 0, 25035284, 10, 0, 25035285, 10, 0, 25035286, 10, 0, 25035287, 10, 0, 25035288, 10, 0, 25035289, 10, 0, 25035290, 10, 0, 25035291, 10, 0, 25035292, 10, 0, 25035293, 10, 0, 25035294, 10, 0, 25035295, 10, 0, 25035296, 10, 0, 25035297, 10, 0, 25035298, 10, 0, 25035299, 10, 0, 25035300, 10, 0, 25035301, 10, 0, 25035302, 10, 0, 25035303, 10, 0, 25100819, 10, 0 )
